# seattle-python-401d17

./: .gitignore  README.md
class-02/demo/factorial/tests/: test_factorial.py
class-02/demo/fizz-buzz/: pyproject.toml
class-02/demo/fizz-buzz/fizz_buzz_package/: fizz_buzz_module.py
class-02/demo/fizz-buzz/tests/: test_fizz_buzz.py
class-02/factorial/: pyproject.toml
class-02/factorial/factorial/: factorial.py
class-02/factorial/tests/: test_factorial_recursion.py
class-02/fizz-buzz/tests/: test_app.py
class-02/warmup/: NOTES.md  warm-up.md
class-05/demos/linked-list/: pyproject.toml
class-05/demos/linked-list/linked_list/: linked_list.py
class-05/demos/linked-list/tests/: test_linked_list.py
class-06/lab/tests/version_1/: test_roll_dice.py
class-08/review/kth-from-end/: kth_from_end.py  pyproject.toml
class-09/lab/game-of-greed/: pyproject.toml
class-09/lab/game-of-greed/game_of_greed/: game.py  game_logic.py
class-09/lab/game-of-greed/tests/: flo.py
class-09/lab/game-of-greed/tests/version_4/: complete.sim.txt  test_game_complete.py
class-10/stacks_and_queues/: pyproject.toml  stacks_and_queues.py  test_queues.py  test_stacks.py
class-10/stacks_and_queues/.history/: queue_20200402102153.py  queue_20200523224348.py  queue_20200523224435.py  queue_20200526092509.py  queue_20200526092847.py  queue_20200526093020.py  queue_20200526093047.py  queue_20200526093140.py  queue_20200526093224.py  queue_20200526093241.py  queue_20200526093321.py  queue_20200526093325.py  queue_20200526093758.py  queue_20200526093849.py  queue_20200526093900.py  queue_20200526094024.py  queue_20200526094452.py  queue_20200526094616.py  queue_20200526094622.py  queue_20200526094748.py  queue_20200526094750.py  queue_20200526095015.py  queue_20200526095118.py  queue_20200526095501.py  queue_20200526100015.py  queue_20200526100106.py  queue_20200526100131.py  queue_20200526100148.py  queue_20200526100231.py  queue_20200526100341.py  queue_20200526100607.py  test_queue_20200402102153.py  test_queue_20200523224330.py
class-15/: README.md
class-15/demo/tree-demo/tests/: test_binary_search_tree.py  test_binary_tree.py
class-15/demo/tree-demo/tree/: binary_search_tree.py  binary_tree.py  node.py
class-16/: README.md
class-16/demo/: DEMO.md
class-16/demo/serverless/: pyproject.toml  requirements.txt  vercel.json
class-16/demo/serverless/api/: aloha.py  argo.py  define.py  howdy.py  poster.py
class-17/demo/cf-courses/: pyproject.toml  scraper.py
class-18/demo/crypto/: corpus_loader.py  is_english_word.py  number_cipher.py  pyproject.toml
class-19/demos/ssn/: find_soc_sec.py  generate_text.py  pyproject.toml  text_with_soc_sec_nums.txt  validate_ssn.py
class-19/review/: fizz_buzz_tree.py  pyproject.toml  test_fizz_buzz_tree.py
class-26/demo/things-project/: README.md  pyproject.toml
class-26/demo/things-project/django_things_project/: settings.py  urls.py
class-26/demo/things-project/templates/: about.html  base.html  home.html
class-26/demo/things-project/things/: tests.py  urls.py  views.py
class-27/demo/thing-rater/: pyproject.toml
class-27/demo/thing-rater/templates/: thing_detail.html  thing_list.html
class-27/demo/thing-rater/thing_rater_project/: settings.py
class-27/demo/thing-rater/things/: tests.py  urls.py  views.py
class-28/demo/thing-rater/templates/: about.html  base.html  thing_create.html  thing_delete.html  thing_detail.html  thing_update.html
class-28/demo/thing-rater/thing_rater_project/: urls.py
class-28/demo/thing-rater/things/: models.py  tests.py  urls.py  views.py
class-28/demo/thing-rater/things/migrations/: 0001_initial.py  (+1 more)
class-31/challenge-review/: hash_table.py  pyproject.toml  test_hash_table.py
class-32/demo/blogapi-permissions/: pyproject.toml
class-32/demo/blogapi-permissions/blogapi_project/: settings.py  urls.py
class-32/demo/blogapi-permissions/posts/: permissions.py  views.py
class-32/demo/blogapi-postgres/: docker-compose.yml
class-33/auth-tests/: tests.py
class-33/demo/authenticated-things-end/: docker-compose.yml  manage.py  requirements.txt
class-33/demo/authenticated-things-end/things/: permissions.py
class-33/demo/authenticated-things-end/things_project/: asgi.py  settings.py  urls.py  wsgi.py
class-33/demo/authenticated-things-start/: pyproject.toml
class-33/demo/authenticated-things-start/things/: models.py  serializers.py  tests.py  urls.py  views.py
class-33/demo/authenticated-things-start/things_project/: settings.py  urls.py
class-34/: DEPLOYMENT_NOTES.md
class-35/: README.md
class-35/graph-demo/: graph.py  pyproject.toml  test_graph.py
class-37/demos/expert-eight-ball/: package-lock.json  package.json
class-37/demos/expert-eight-ball/pages/: index.js
class-37/warmup-review/: common_items.py
class-38/demos/expert-eight-ball/: package-lock.json
class-38/demos/expert-eight-ball/components/: Bar.js  EightBall.js  Footer.js  Header.js  QuestionForm.js  Report.js
class-38/demos/expert-eight-ball/pages/: careers.js  index.js
class-39/demos/cookie-stand-prototype/: package-lock.json  package.json
class-39/demos/cookie-stand-prototype/contexts/: auth.js
class-39/demos/cookie-stand-prototype/pages/: _app.js  index.js  overview.js
class-42/demos/fancy-linked-list/: deco.py  fancy_linked_list.py  pyproject.toml  test_fancy_linked_list.py
class-45/: README.md
fast-sockets/fast-sockets-client/: README.md  index.html  main.py  pyproject.toml
fast-sockets/fast-sockets-server/: README.md  main.py  pyproject.toml
fast-sockets/fast-sockets-server/static/: index.html
(+1 files in other folders)
