[tool.poetry]
name = "stacks_and_queues"
version = "0.1.0"
description = ""
authors = ["JB <jb.tellez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
